--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,1 +1,4 @@
+FROM php:8-fpm
+RUN apt-get update && apt-get install -y git
 
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
