--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -4,3 +4,5 @@ RUN apt-get update && apt-get install -y git
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN pecl install xdebug && docker-php-ext-enable xdebug
+
+RUN docker-php-ext-install mysqli
